--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/penguat/apse/issues"
   },
-  "homepage": "https://github.com/penguat/apse#readme"
+  "homepage": "https://github.com/penguat/apse#readme",
+  "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
+  }
 }
