update name & create README

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apse",
+  "name": "portable-search-engine",
   "version": "0.1.0",
   "description": "Alex/penguat's Portable Search Engine",
   "main": "index.js",
